--- a/index.html
+++ b/index.html
@@ -1,26 +1,199 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/slick.css">
-  <link rel="stylesheet" href="css/jquery.fancybox.css">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <header class="header">
-    <div class="container">
-      
-    </div>
-  </header>
-  
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&family=Roboto+Condensed&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/slick.css" />
+    <link rel="stylesheet" href="css/jquery.fancybox.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header__inner">
+          <a href="#" class="logo">
+            <img class="logo__link" src="images/logo.svg" alt="logo" />
+          </a>
+          <nav class="menu">
+            <uk class="menu__list">
+              <li class="menu__item">
+                <a href="#" class="menu__list-link">О НАС</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__list-link">АВТОПАРК</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__list-link">ОТЗЫВЫ</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__list-link">УСЛОВИЯ</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__list-link">КОНТАКТЫ</a>
+              </li>
+            </uk>
+          </nav>
+          <a href="tel:+375449999999" class="phone">+375 (44) 999 99 99</a>
+        </div>
+      </div>
+    </header>
+    <section class="top">
+      <div class="container">
+        <div class="top__heading">
+          <div class="top__content">
+            <h1 class="top__title">Каршеринг в Минске LUX автомобили</h1>
+            <p class="top__text">
+              Закажи эксклюзивный автомобиль через мобильное приложение в любой
+              точке города
+            </p>
+            <a class="aplication-btn" href="#">Скачать приложение</a>
+          </div>
+          <div class="top__slider">
+            <div class="top__slider-item">
+              <img
+                class="top__slider-imeges"
+                src="images/slider-img.png"
+                alt=""
+              />
+              <p class="top__slider-text">
+                <span>40 коп/мин</span> <span>5 мест</span>
+                <span>50 тыс. км пробег</span>
+              </p>
+            </div>
+            <div class="top__slider-item">
+              <img
+                class="top__slider-imeges"
+                src="images/slider-img.png"
+                alt=""
+              />
+              <p class="top__slider-text">
+                <span>40 коп/мин</span> <span>5 мест</span>
+                <span>50 тыс. км пробег</span>
+              </p>
+            </div>
+            <div class="top__slider-item">
+              <img
+                class="top__slider-imeges"
+                src="images/slider-img.png"
+                alt=""
+              />
+              <p class="top__slider-text">
+                <span>40 коп/мин</span> <span>5 мест</span>
+                <span>50 тыс. км пробег</span>
+              </p>
+            </div>
+            <div class="top__slider-item">
+              <img
+                class="top__slider-imeges"
+                src="images/slider-img.png"
+                alt=""
+              />
+              <p class="top__slider-text">
+                <span>40 коп/мин</span> <span>5 мест</span>
+                <span>50 тыс. км пробег</span>
+              </p>
+            </div>
+            <div class="top__slider-item">
+              <img
+                class="top__slider-imeges"
+                src="images/slider-img.png"
+                alt=""
+              />
+              <p class="top__slider-text">
+                <span>40 коп/мин</span> <span>5 мест</span>
+                <span>50 тыс. км пробег</span>
+              </p>
+            </div>
+            <div class="top__slider-item">
+              <img
+                class="top__slider-imeges"
+                src="images/slider-img.png"
+                alt=""
+              />
+              <p class="top__slider-text">
+                <span>40 коп/мин</span> <span>5 мест</span>
+                <span>50 тыс. км пробег</span>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="top__bottom">
+          <div class="top__items">
+            <div class="top__item">
+              <img class="top__item-img" src="images/icon-1.svg" alt="" />
+              <p class="top__item-text">
+                Более 300 автомобилей в вашем распоряжении
+              </p>
+            </div>
+            <div class="top__item">
+              <img class="top__item-img" src="images/icon-2.svg" alt="" />
+              <p class="top__item-text">
+                Дешевле такси и собственного автомобиля
+              </p>
+            </div>
+            <div class="top__item">
+              <img class="top__item-img" src="images/icon-3.svg" alt="" />
+              <p class="top__item-text">
+                Лучшие автомобили в любой точке города
+              </p>
+            </div>
+          </div>
+          <div class="top__links">
+            <a href="#" class="top__link">Условия аренды автомобиля </a>
+            <a href="#" class="top__link">Публичный договор</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="rent">
+      <div class="container">
+        <div class="rent__inner">
+          <div class="rent__content">
+            <h3 class="rent__title">
+              Условия аренды 
+              автомобиля
+            </h3>
+            <p class="rent__rext">
+              Мы ценим каждого клиента и предоставляем 
+              качественный сервис каршеринга в Минске.
+            </p>
+            <p class="rent__rext">
+              Именно для того, что бы Вам было 
+              приятно и безопасно пользоваться нашим 
+              сервисом на постоянной основе, 
+              мы выделили несколько условий для того, 
+              чтобы взять машину в аренду
+            </p>
+            <a class="aplication-btn" href="#">Скачать приложение</a>
+          </div>
+          <div class="rent__item">
+            <div class="rent__item-num">01</div>
+            <p class="rent__rent-title">
+              Опыт вождения 
+              от 2х лет
+            </p>
+            <p class="rent__item-text">
+              Для того, чтобы арендовать автомобиль, 
+              Вам необходимо зарегестрировать свои прав 
+              в нашем мобильном приложении
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="js/slick.min.js"></script>
-  <script src="js/jquery.fancybox.min.js"></script>
-  <script src="js/main.js"></script>
-</body>
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/jquery.fancybox.min.js"></script>
+    <script src="js/main.js"></script>
+  </body>
 </html>
