--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             <img class="logo__link" src="images/logo.svg" alt="logo" />
           </a>
           <nav class="menu">
-            <uk class="menu__list">
+            <button class="menu__btn"></button>
+            <ul class="menu__list">
               <li class="menu__item">
                 <a href="#" class="menu__list-link">О НАС</a>
               </li>
@@ -39,7 +40,7 @@
               <li class="menu__item">
                 <a href="#" class="menu__list-link">КОНТАКТЫ</a>
               </li>
-            </uk>
+            </ul>
           </nav>
           <a href="tel:+375449999999" class="phone">+375 (44) 999 99 99</a>
         </div>
@@ -157,39 +158,205 @@
       <div class="container">
         <div class="rent__inner">
           <div class="rent__content">
-            <h3 class="rent__title">
-              Условия аренды 
-              автомобиля
-            </h3>
-            <p class="rent__rext">
-              Мы ценим каждого клиента и предоставляем 
-              качественный сервис каршеринга в Минске.
+            <h3 class="rent__title">Условия аренды автомобиля</h3>
+            <p class="rent__text">
+              Мы ценим каждого клиента и предоставляем качественный сервис
+              каршеринга в Минске.
             </p>
-            <p class="rent__rext">
-              Именно для того, что бы Вам было 
-              приятно и безопасно пользоваться нашим 
-              сервисом на постоянной основе, 
-              мы выделили несколько условий для того, 
-              чтобы взять машину в аренду
+            <p class="rent__text">
+              Именно для того, что бы Вам было приятно и безопасно пользоваться
+              нашим сервисом на постоянной основе, мы выделили несколько условий
+              для того, чтобы взять машину в аренду
             </p>
             <a class="aplication-btn" href="#">Скачать приложение</a>
           </div>
           <div class="rent__item">
             <div class="rent__item-num">01</div>
-            <p class="rent__rent-title">
-              Опыт вождения 
-              от 2х лет
-            </p>
+            <p class="rent__item-title">Опыт вождения <br> от 2х лет</p>
             <p class="rent__item-text">
-              Для того, чтобы арендовать автомобиль, 
-              Вам необходимо зарегестрировать свои прав 
-              в нашем мобильном приложении
-
+              Для того, чтобы арендовать автомобиль, Вам необходимо
+              зарегестрировать свои прав в нашем мобильном приложении
+            </p>
+          </div>
+          <div class="rent__item">
+            <div class="rent__item-num">02</div>
+            <p class="rent__item-title">Только по Минску</p>
+            <p class="rent__item-text">
+              Наши автомобили работают только в пределах города Минску.
+              За город на наших автомобилях, к сожалению, выезжать нельзя.
+            </p>
+          </div>
+          <div class="rent__item">
+            <div class="rent__item-num">03</div>
+            <p class="rent__item-title">Мобильный телефон и интернет</p>
+            <p class="rent__item-text">
+              Для использования нашего сервиса Вам необходим мобильный телефон и интернет.
+              Бронирование, оплата и вся отчетность происходит онлайн
             </p>
           </div>
         </div>
       </div>
     </section>
+     <section class="benefits">
+      <div class="container">
+        <h3 class="benefits__title">
+          Преимущества
+        </h3>
+        <div class="benefits__items">
+          <ul class="benefits__list">
+            <li class="benefits__list-item">мойка авто каждую неделю</li>
+            <li class="benefits__list-item">премиум автомобили</li>
+            <li class="benefits__list-item">мощный двигатель</li>
+            <li class="benefits__list-item">поддержка 24/7</li>
+            <li class="benefits__list-item">бензин за наш счет</li>
+            <li class="benefits__list-item">парковка по всему городу</li>
+            <li class="benefits__list-item">каждый месяц ТО автомобиля</li>
+          </ul>
+          <img class="benefits__images" src="images/benefits.png" alt="">
+          <div class="benefits__content">
+            <p class="benefits__text">Вы можете выбрать один из 300 наших автомобилей, 
+              насладиться сервисом, повысить уровень жизни, не покупая дорогой автомобиль, 
+              успевать везде и каждый день ездить на новом премиум автомобиле.
+            </p>
+            <p class="benefits__text">Посмотрите видео презентацию нашего 
+              сервиса и выберите автомобиль уже сейчас!</p>
+              <a class="video-popup" data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk">
+                ПОСМОТРЕТЬ <br>
+                ПРЕЗЕНТАЦИЮ</a>
+          </div>
+        </div>
+      </div>
+    </section>
+     <section class="reviews"> 
+      <div class="container">
+        <h3 class="reviews__title">
+          Отзывы
+        </h3>
+        <div class="reviews__slider">
+          <div class="reviews__item">
+            <p class="reviews__item-name">
+              Михаил, 28 лет
+            </p>
+            <p class="reviews__item-text">
+              Очень рад, что Вы есть!
+              Пока еще бэху купить не могу, но покататься взять - это отличная возможность!
+              Такое ощущение, что у меня личный огромный автопарк элитных тачек)))
+            </p>
+          </div>
+          <div class="reviews__item">
+            <p class="reviews__item-name">
+              Инна, 35 лет
+            </p>
+            <p class="reviews__item-text">
+              Очень радует Ваш сервис. Встречаю ВИП клиентов всегда только на Ваших машинах.
+              Удобно, что расчет по минутам, это экономит бюджет компании.
+            </p>
+          </div>
+          <div class="reviews__item">
+            <p class="reviews__item-name">
+              Игорь, 25 лет
+            </p>
+            <p class="reviews__item-text">
+              Ребята, Вы ТОПЧИК!
+              Брал машину на свидание, покатал девушку, она в восторге, я доволен, все счастливы)
+            </p>
+          </div>
+          <div class="reviews__item">
+            <p class="reviews__item-name">
+              Марина, 30 лет
+            </p>
+            <p class="reviews__item-text">
+              Люблю Ваш сервис. Не люблю такси. В приложении быстро нахожу машину поблизости. Всегда чистая, свежая, приятно садиться в нее. 
+              До работы или на шопинг еду с комфортом. 
+            </p>
+          </div>
+          <div class="reviews__item">
+            <p class="reviews__item-name">
+              Марина, 30 лет
+            </p>
+            <p class="reviews__item-text">
+              Люблю Ваш сервис. Не люблю такси. В приложении быстро нахожу машину поблизости. Всегда чистая, свежая, приятно садиться в нее. 
+              До работы или на шопинг еду с комфортом. 
+            </p>
+          </div>
+          <div class="reviews__item">
+            <p class="reviews__item-name">
+              Михаил, 28 лет
+            </p>
+            <p class="reviews__item-text">
+              Очень рад, что Вы есть!
+              Пока еще бэху купить не могу, но покататься взять - это отличная возможность!
+              Такое ощущение, что у меня личный огромный автопарк элитных тачек)))
+            </p>
+          </div>
+          <div class="reviews__item">
+            <p class="reviews__item-name">
+              Инна, 35 лет
+            </p>
+            <p class="reviews__item-text">
+              Очень радует Ваш сервис. Встречаю ВИП клиентов всегда только на Ваших машинах.
+              Удобно, что расчет по минутам, это экономит бюджет компании.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section> 
+    <section class="feedback">
+      <div class="container">
+        <div class="feedback__inner">
+          <img class="feedback__images" src="images/feedback-img.png" alt="">
+          <form class="feedback__form">
+            <h3 class="feedback__title">
+              Остались вопросы?
+            </h3>
+            <p class="feedback__text">
+              Мы перезвоним Вам и проконсультируем по любому вопросу
+            </p>
+            <input class="feedback__input" type="text" placeholder="Имя">
+            <input class="feedback__input" type="text" placeholder="Телефон">
+            <button class="feedback__btn" type="submit">ОСТАВИТЬ ЗАЯВКУ</button>
+          </form>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__top">
+          <a class="aplication-btn" href="#">Скачать приложение</a>
+          <nav class="menu">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a href="#" class="menu__list-link">О НАС</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__list-link">АВТОПАРК</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__list-link">ОТЗЫВЫ</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__list-link">УСЛОВИЯ</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__list-link">КОНТАКТЫ</a>
+              </li>
+            </ul>
+          </nav>
+          <a href="tel:+375449999999" class="phone">+375 (44) 999 99 99</a>
+        </div>
+        <ul class="footer__social">
+          <li class="footer__social-item"><a href="#" class="footer__social-link">
+            <img class="footer__social-img" src="images/facebook.svg" alt="">
+          </a></li>
+          <li class="footer__social-item"><a href="#" class="footer__social-link">
+            <img class="footer__social-img" src="images/instagram.svg" alt="">
+          </a></li>
+          <li class="footer__social-item"><a href="#" class="footer__social-link">
+            <img class="footer__social-img" src="images/youtube.svg" alt="">
+          </a></li>
+        </ul>
+      </div>
+    </footer> 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
